-Started LineChart &Added BoolInt Class v1.0 &Added Clip Class v1.0

--- a/Chart.JS/Chart.JS.csproj
+++ b/Chart.JS/Chart.JS.csproj
@@ -42,7 +42,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BoolInt.cs" />
+    <Compile Include="Clip.cs" />
     <Compile Include="Color.cs" />
+    <Compile Include="LineChart.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
