--- a/Chart.JS/Chart.JS.csproj
+++ b/Chart.JS/Chart.JS.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Fill.cs" />
     <Compile Include="LineChart.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SteppedLine.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
